# betta_mvp

./: .env.example  .gitignore  download_model.py  init_db.py  pyproject.toml
app/: main.py  main1.py  main_fastapi.py  main_forum_nodb.py  main_noLoRa.py  main_runner_async.py  main_runner_noasync.py
app/agents/: base.py  critic_agent.py  host_agent.py  insight_agent.py  insight_agent_noLoRA.py  media_agent.py  media_agent_mock.py  query_agent.py  report_agent.py  report_agent_noGraphRAG.py  report_agent_noPromptChain.py
app/core/: config_noVl.py  llm_client.py  llm_client_noVl.py  logging.py  state.py  types.py
app/orchestrator/: forum_engine.py  runner.py  runner1.py  runner_noasync.py
app/report/: render.py  schema.py
app/services/: sentiment_service.py
app/storage/: db_manager.py  io.py  trace.jsonl
app/tools/: base.py  rag_search.py  search.py  sentiment_tool.py  sql_tool.py  sql_tool_sqlite3.py  video_spider.py  vision_tool.py  web_scraper.py
docs/: su7_internal_policy.txt
templates/: index.html  index_noEChart.html  index_nomemory.html
